# brave-core

./: Jenkinsfile  chromium_presubmit_config.json5  package-lock.json  package.json
android/: brave_java_resources.gni  brave_java_sources.gni
app/: app_management_strings.grdp  brave_command_ids.h  brave_generated_resources.grd  brave_settings_strings.grdp  brave_strings.grd  feature_defaults_unittest.cc  generated_resources.grd  generated_resources_override.grd  os_settings_search_tag_strings.grdp  os_settings_strings.grdp  password_manager_ui_strings.grdp  settings_strings.grdp
browser/: about_flags.cc  brave_browser_process_impl.cc  brave_content_browser_client.cc  brave_drm_tab_helper.cc  brave_prefs_browsertest.cc  brave_profile_prefs.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/ui/views/ai_rewriter/: BUILD.gn  ai_rewriter_button.cc  ai_rewriter_button.h  ai_rewriter_button_view.cc  ai_rewriter_button_view.h  ai_rewriter_button_view_browsertest.cc
components/: management_strings.grdp  plus_addresses_strings.grdp
patches/: base-BUILD.gn.patch  base-threading-thread_restrictions.h.patch  build-config-android-internal_rules.gni.patch  build-config-compiler-BUILD.gn.patch  chrome-BUILD.gn.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-android-java-AndroidManifest.xml.patch  chrome-android-java-src-org-chromium-chrome-browser-privacy-settings-PrivacySettings.java.patch  chrome-android-java-src-org-chromium-chrome-browser-sync-settings-ManageSyncSettings.java.patch  chrome-browser-BUILD.gn.patch  (+74 more)
test/: BUILD.gn
(+176 files in other folders)
