# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("ai_rewriter") {
  sources = [
    "ai_rewriter_button.cc",
    "ai_rewriter_button.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//ui/base",
    "//ui/gfx",
    "//ui/views",
  ]
}
