# Copyright (c) 2024 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

source_set("ai_rewriter") {
  sources = [
    "ai_rewriter_button_view.cc",
    "ai_rewriter_button_view.h",
  ]

  deps = [
    "//base",
    "//content/public/browser",
    "//ui/base",
    "//ui/gfx",
    "//ui/views",
  ]
}

source_set("browser_tests") {
  testonly = true

  sources = [ "ai_rewriter_button_view_browsertest.cc" ]

  defines = [ "HAS_OUT_OF_PROC_TEST_RUNNER" ]

  deps = [
    ":ai_rewriter",
    "//base",
    "//brave/browser",
    "//brave/components/ai_rewriter/common",
    "//brave/components/constants",
    "//chrome/browser/ui",
    "//chrome/test",
    "//content/test:test_support",
    "//net",
    "//testing/gmock",
    "//testing/gtest",
    "//ui/base",
    "//url",
  ]
}
